# deephaven-core

./: .env  .gitattributes  .gitignore  .lycheeignore  1  AGENTS.md  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GRADLE.md  LICENSE.md  NOTICE.md  README.md  RELEASE.md  SECURITY.md  TRIAGE.md  blog-post-real-time-trading-dashboard.md  build.gradle  classpaths.gradle  cog.toml  deephaven-changelog  default_groovy.env  docker-compose-common.yml  docker-compose.yml  gradle.properties  gradle9-migration-summary.md  license-header  package-lock.json  real-time-demo.py  settings.gradle
R/rdeephaven/src/: CMakeLists.txt  Makevars  Makevars.in  RcppExports.cpp  client.cpp  client_caller.cpp  newClient.cpp
cpp-client/deephaven/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
cpp-client/deephaven/client/: CMakeLists.txt  build-dependencies.sh  build.sh
cpp-client/deephaven/cmake/: deephavenConfig.cmake
cpp-client/deephaven/custom-triplets/: x64-linux-dynamic-release.cmake  x64-windows-release
cpp-client/deephaven/dhclient/: CMakeLists.txt
cpp-client/deephaven/dhcore/: CMakeLists.txt
cpp-client/deephaven/examples/: CMakeLists.txt
cpp-client/deephaven/tests/: CMakeLists.txt  add_drop_test.cc  aggregates_test.cc  attributes_test.cc  basic_test.cc  buffer_column_source_test.cc  cython_support_test.cc  date_time_test.cc  filter_test.cc  head_and_tail_test.cc  input_table_test.cc  join_test.cc  lastby_test.cc  main.cc  merge_tables_test.cc  new_table_test.cc  on_close_cb_test.cc  script_test.cc  select_test.cc  sort_test.cc  string_filter_test.cc  table_test.cc  test_util.cc  test_util.h  ticking_test.cc  ungroup_test.cc  update_by_test.cc  utility_test.cc  validation_test.cc  view_test.cc
cpp-client/simple-example/: CMakeLists.txt
cpp-client/tests/: CMakeLists.txt  add_drop_example.cc  add_drop_test.cc  aggregates_example.cc  aggregates_test.cc  attributes_test.cc  basic_test.cc  buffer_column_source_test.cc  clean_shutdown_test.cc  cython_support_test.cc  filter_example.cc  filter_test.cc  head_and_tail_example.cc  head_and_tail_test.cc  join_example.cc  join_test.cc  lastby_example.cc  lastby_test.cc  main.cc  merge_tables_example.cc  merge_tables_test.cc  new_table_example.cc  new_table_test.cc  script_test.cc  select_example.cc  select_test.cc  sort_example.cc  sort_test.cc  string_filter_example.cc  string_filter_test.cc  table_cleanup_example.cc  test_util.cc  test_util.h  ticking_test.cc  ungroup_example.cc  ungroup_test.cc  update_by_test.cc  utility_test.cc  validation_example.cc  validation_test.cc  (+2 more)
cpp-examples/alt-arrow/: CMakeLists.txt  main.cc
cpp-examples/build-all-examples/: CMakeLists.txt
cpp-examples/compare_approaches/: CMakeLists.txt  main.cc
cpp-examples/create_table_with_arrow_flight/: CMakeLists.txt  main.cc
cpp-examples/create_table_with_table_maker/: CMakeLists.txt  main.cc
cpp-examples/demos/: CMakeLists.txt  chapter1.cc  chapter2.cc  chapter3.cc  crypto.cc
cpp-examples/read_table_with_arrow_flight/: CMakeLists.txt  main.cc
plugin/pyecho/: README.md  pyproject.toml  setup.cfg
py/client/: README.md  build.gradle  py-test-to-junit.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run-tests.sh  sample.parquet  setup.py
py/client-ticking/: README.md  build.gradle  demo_simple.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
py/client-ticking/demos/: demo_chapter3.py  demo_simple.py
py/client-ticking/pyClientTickingWheel/: entrypoint.sh
py/client-ticking/pyClientTickingWheels/: entrypoint.sh
py/client-ticking/testPyClientTicking/: entrypoint.sh
py/client-ticking/tests/: __init__.py  suite.py  test_ticking_all_types.py  test_ticking_basic.py  test_ticking_lists.py
py/client/docs/: .gitignore
py/client/examples/: asyncio_session.py  csv_downloader.py  demo_asof_join.py  demo_input_table_update.py  demo_merge_tables.py  demo_query.py  demo_run_script.py  demo_table_ops.py  file_downloader.py  import_test_data.py  mt_session.py
py/client/pydeephaven/: __init__.py  _app_service.py  _arrow.py  _arrow_flight_service.py  _batch_assembler.py  _config_service.py  _console_service.py  _constants.py  _input_table_service.py  _plugin_obj_service.py  _session_service.py  _table_interface.py  _table_ops.py  _table_service.py  _utils.py  agg.py  combo_agg.py  constants.py  dherror.py  filters.py  query.py  server_object.py  session.py  table.py  ticket.py  updateby.py  utils.py
py/client/tests/: __init__.py  gen_test_data.py  suite.py  test_arrow_types.py  test_console.py  test_filters.py  test_flightsql.py  test_multi_session.py  test_multijoin.py  test_plugin_client.py  test_query.py  test_session.py  test_sync.py  test_table.py  test_updateby.py  testbase.py  wait_for_table.py
py/client2/: .gitignore  CMakeLists.txt  README.md  cdeephaven_client.pxd  deephaven_client.pyx  deephaven_util.py  demo_print_deltas.py  demo_print_ticking.py  demo_process_ticking.py  demo_process_ticking_generator.py  demo_read_chunk.py  demo_simple.py  setup.py
py/client2/pydeephaven2/: .gitignore  __init__.pxd  __init__.py  pydeephaven2.pyx  types.pxi
py/embedded-server/: README.md  README_PyPi.md  build.gradle  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.sh
py/embedded-server/deephaven_server/: __init__.py  cli.py  server.py  start_jvm.py
py/embedded-server/java-runtime/: build.gradle  gradle.properties
py/embedded-server/tests/: test_load_app_modules.py
py/server/: README.md  build.gradle  gradle.properties  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
py/server/deephaven/: __init__.py  _dep.py  _gc.py  _jpy.py  _query_scope.py  _table_reader.py  _udf.py  _ugp.py  _wrapper.py  agg.py  appmode.py  arrow.py  barrage.py  calendar.py  column.py  concurrency_control.py  configuration.py  constants.py  csv.py  dherror.py  dtypes.py  execution_context.py  experimental.py  filters.py  html.py  jcompat.py  liveness_scope.py  multijoin.py  numpy.py  outer_joins.py  pandas.py  parquet.py  perfmon.py  plugin_authorization.py  table.py  (+18 more)
(+34950 files in other folders)
