[metadata]
name = deephaven-pyecho
version = 0.0.1.dev0
description = Example Deephaven Python ObjectType plugin demonstrating manual authorization transforms
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    deephaven-plugin>=0.6.0

[options.packages.find]
where = src

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven_pyecho._register:PyEchoRegistration
