[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[tool.mypy]
namespace_packages = true
exclude = '(tests|demos)'

[[tool.mypy.overrides]]
module = "pyarrow"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "pydeephaven_ticking._core"
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "Cython.*"
ignore_missing_imports = true

[tool.ruff]
lint.select = ["F", "I"]
exclude = []

[tool.ruff.format]
exclude = []
