[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[tool.mypy]
namespace_packages = true
exclude = ["tests", "build"]

[[tool.mypy.overrides]]
module = [
  "jpy.*",
  "jpyutil.*",
  "deephaven_internal.*"
]
ignore_missing_imports = true

[tool.ruff]
lint.select = ["F", "I"]
exclude = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E741", "F405", "F403", "F811", "F841"]